# Marv

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  APP_FLOW.md  BACKEND_STRUCTURE.md  CHANGELOG.md  CLEANUP_LOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.sandbox-browser  Dockerfile.sandbox-common  FRONTEND_GUIDELINES.md  IMPLEMENTATION_PLAN.md  Implementation Plan-0302  Implementation Plan-Remediation.md  LICENSE  MARV_SEMANTIC_PATCH_LEDGER_MIGRATION_2026-02-23.md  Memory 3d Redesign Plan  PRD.md  README.md  Skill.md  TECH_STACK.md  VISION.md  appcast.xml  docker-compose.yml  docker-setup.sh  docs.acp.md  fly.private.toml  fly.toml  marv-legacy.mjs  marv.podman.env  package.json  pnpm-lock.yaml  pyproject.toml  render.yaml  setup-podman.sh  tsconfig.json  (+3 more)
.claude/: launch.json
.github/: dependabot.yml  labeler.yml
.obsidian/: workspace.json
Plan/: 2026-03-12-self-settings-heartbeat-proactive-design.md
backend/: __init__.py  cli.py
core/: __init__.py  api.py
docs/: CNAME  DEPLOY_MACBOOK_PRO_M1.md  HEARTBEAT.md  IM_CHANNELS.md  IPC_TOOLS.md  LIVE_TUNING.md  MACOS_IOS_CLIENTS.md  PACKAGES.md  PERMISSIONS.md  PI_CORE_RESHAPE.md  SANDBOX.md  SCHEDULED_TASKS.md  SKILLS_ECOSYSTEM.md  SUBAGENTS.md  TELEGRAM_SETUP.md  brave-search.md  ci.md  date-time.md  docs.json  index.md  logging.md  memory-redesign-plan.md  network.md  operations.md  perplexity.md  pi-dev.md  pi.md  prose.md  tts.md  vps.md
external_source/nanoclaw-main/: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
external_source/nanoclaw-main/src/nanoclaw/: __init__.py  cli.py  server.py
frontend/: package-lock.json  (+2 more)
(+5487 files in other folders)
