[project]
name = "blackbox-agent-runtime"
version = "0.1.0"
description = "Edge runtime and core compute gateway for blackbox agent."
readme = "PRD.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi==0.115.8",
  "uvicorn==0.34.0",
  "sqlmodel==0.0.22",
  "sqlalchemy==2.0.38",
  "alembic==1.14.1",
  "anyio==4.8.0",
  "pydantic==2.10.6",
  "httpx==0.28.1",
  "tenacity==9.0.0",
  "PyJWT==2.10.1",
  "passlib[bcrypt]==1.7.4",
  "cryptography==44.0.1",
  "apscheduler==3.10.4",
  "sqlite-vec==0.1.6",
  "pysqlite3-binary==0.5.4; sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[dependency-groups]
dev = [
  "pytest==8.3.4",
  "pytest-asyncio==0.25.3",
  "ruff==0.9.5",
  "mypy==1.15.0",
  "black==24.10.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
